Update alert and cancellation translations.

--- a/src/languages/alerts/en.json
+++ b/src/languages/alerts/en.json
@@ -1,115 +1,123 @@
 {
-  "ACCIDENT": "Accident",
-  "ASSAULT": "Assault",
-  "NO_DRIVER": "Planning error",
-  "VEHICLE_SHORTAGE": "Vehicle shortage",
-  "VEHICLE_BREAKDOWN": "Vehicle breakdown",
-  "WRONG_ROUTE": "Wrong route",
-  "WEATHER": "Weather",
-  "STRIKE": "Strike",
-  "OTHER": "Other",
-  "VEHICLE_OFF_THE_ROAD": "Vehicle off the road",
-  "SEIZURE": "Seizure",
-  "ITS_SYSTEM_ERROR": "LIJ-System error",
-  "TOO_MANY_PASSENGERS": "Too many passengers",
-  "OTHER_DRIVER_ERROR": "Other driver error",
-  "EARLIER_DISRUPTION": "Earlier disruption",
-  "NO_TRAFFIC_DISRUPTION": "No traffic disruption",
-  "TRACK_BLOCKED": "Track blocked",
-  "STAFF_DEFICIT": "Staff decifit",
-  "DISTURBANCE": "Disturbance",
-  "VEHICLE_DEFICIT": "Vehicle deficit",
-  "ROAD_CLOSED": "Road closed",
-  "ROAD_TRENCH": "Road trench",
-  "TRACK_MAINTENANCE": "Track maintenance",
-  "TRAFFIC_ACCIDENT": "Traffic accident",
-  "TRAFFIC_JAM": "Traffic jam",
-  "MEDICAL_INCIDENT": "Medical incident",
-  "WEATHER_CONDITIONS": "Weather conditions",
-  "TECHNICAL_FAILURE": "Technical failure",
-  "TEST": "Test",
-  "ROAD_MAINTENANCE": "Road maintenance",
-  "SWITCH_FAILURE": "Switch failure",
-  "STATE_VISIT": "State visit",
-  "POWER_FAILURE": "Power failure",
-  "MISPARKED_VEHICLE": "Misparked car",
-  "PUBLIC_EVENT": "Public event",
-  "ASSAULT_ON_DRIVER": "Assault on driver",
-  "ASSAULT_ON_PASSENGER": "Assault on passenger",
-  "ASSAULT_ON_VEHICLE": "Assault on vehicle",
-  "BREAK_MALFUNCTION": "Break malfunction",
-  "CONGESTION_CAUSED_BY_ACCIDENT": "Congestion (caused by accident)",
-  "CONGESTION_CAUSED_BY_WEATHER": "Congestion cause by weather",
-  "CONGESTION_REASON_UKNOWN": "Congestion (reason unknown)",
-  "CORRECT_ROUTE_BLOCKED": "Correct route blocked",
-  "DEVICE_ERROR": "Device error",
-  "DOOR_MALFUNCTION": "Door malfunction",
-  "DRIVER_ERROR": "Driver error",
-  "DRIVER_LATE": "Driver late",
-  "DRIVER_SEIZURE": "Driver seizures",
-  "ELECTRIC_MALFUNCTION": "Electric malfunction",
-  "ENGINE_MALFUNCTION": "Engine malfunction",
-  "FALSE_ALARM": "False alarm",
-  "FAULT_UNKNOWN": "Fault unknown",
-  "FLUID_LEAKAGE": "Fluid leakage",
-  "INSUFFICIENT_CAPASITY": "Insufficient capasity",
-  "INSUFFICIENT_INSTRUCTIONS_BY_AUTHORITY": "Insufficient instructions (by authority)",
-  "INSUFFICIENT_INSTRUCTIONS_BY_OPERATOR": "Insufficient instructions (by operator)",
-  "ITS_SYSTEM_NOT_INSTALLED": "LIJ-System not installed",
-  "ND_OPERATOR_PLANNING_ERROR": "Operator planning error",
-  "NO_VEHICLE_AVAILABLE": "Vehicle available",
-  "OPERATOR_DEVICE_ERROR": "Operator device error",
-  "OPERATOR_PERSONNEL_ON_STRIKE": "Operator personnel on strike",
-  "OPPOSITE_FAULT": "Opposite fault",
-  "OTHER_ASSAULT": "Other assault",
-  "OTHER_MALFUNCTION": "Other malfunction",
-  "OTHER_OPERATOR_REASON": "Other operator reason",
-  "OTHER_SEIZURE": "Other seizure",
-  "OTHER_STRIKE": "Other strike",
-  "OTHER_ITS_ERROR": "Other LIJ-error",
-  "OUT_OF_FUEL": "Out of fuel",
-  "OWN_FAULT": "Own fault",
-  "PASSED_OUT_PASSENGER": "Passed out passenger",
-  "PASSENGER_INJURED": "Passenger injured",
-  "PASSENGER_SEIZURE": "Passenger seizure",
-  "ROAD_BLOCKED": "Road blocked",
-  "STAFF_SHORTAGE": "Staff shortage",
-  "STUCK_CAUSED_BY_SLIPPERY": "Stuck caused by slippery",
-  "UNDRIVEABLE_CONDITIONS": "Undriveable conditions",
-  "UNKNOWN_CAUSE": "Unknown cause",
-  "USER_ERROR": "User error",
-  "VEHICLE_OFF_THE_ROAD_BY_DRIVER_ERROR": "Vehicle off road (by driver error)",
-  "VEHICLE_OFF_THE_ROAD_BY_OTHER_REASON": "Vehicle off road (by other reason)",
-  "VS_OPERATOR_PLANNING_ERROR": "Operator planning error",
-  "WRONG_INFORMATION_IN_DEVICE": "Wrong information in device",
-  "SLIPPERY_TRACK": "Slippery track (leawes)",
-  "MISSPARKED_VEHICLE": "Miss parked vehicle",
+  "category.ACCIDENT": "Accident",
+  "category.ASSAULT": "Assault",
+  "category.NO_DRIVER": "Planning error",
+  "category.VEHICLE_SHORTAGE": "Vehicle shortage",
+  "category.VEHICLE_BREAKDOWN": "Vehicle breakdown",
+  "category.WRONG_ROUTE": "Wrong route",
+  "category.WEATHER": "Weather",
+  "category.STRIKE": "Strike",
+  "category.OTHER": "Other",
+  "category.VEHICLE_OFF_THE_ROAD": "Vehicle off the road",
+  "category.SEIZURE": "Seizure",
+  "category.ITS_SYSTEM_ERROR": "LIJ-System error",
+  "category.TOO_MANY_PASSENGERS": "Too many passengers",
+  "category.OTHER_DRIVER_ERROR": "Other driver error",
+  "category.EARLIER_DISRUPTION": "Earlier disruption",
+  "category.NO_TRAFFIC_DISRUPTION": "No traffic disruption",
+  "category.TRACK_BLOCKED": "Track blocked",
+  "category.STAFF_DEFICIT": "Staff decifit",
+  "category.DISTURBANCE": "Disturbance",
+  "category.VEHICLE_DEFICIT": "Vehicle deficit",
+  "category.ROAD_CLOSED": "Road closed",
+  "category.ROAD_TRENCH": "Road trench",
+  "category.TRACK_MAINTENANCE": "Track maintenance",
+  "category.TRAFFIC_ACCIDENT": "Traffic accident",
+  "category.TRAFFIC_JAM": "Traffic jam",
+  "category.MEDICAL_INCIDENT": "Medical incident",
+  "category.WEATHER_CONDITIONS": "Weather conditions",
+  "category.TECHNICAL_FAILURE": "Technical failure",
+  "category.TEST": "Test",
+  "category.ROAD_MAINTENANCE": "Road maintenance",
+  "category.SWITCH_FAILURE": "Switch failure",
+  "category.STATE_VISIT": "State visit",
+  "category.POWER_FAILURE": "Power failure",
+  "category.MISPARKED_VEHICLE": "Misparked car",
+  "category.PUBLIC_EVENT": "Public event",
 
-  "CANCEL_DEPARTURE": "Departure cancelled",
-  "DETOUR": "Detour",
-  "EARLY_DEPARTURE": "Early departure",
-  "EARLY_DEPARTURE_FROM_TIMING_POINT": "Early departure from timing stop",
-  "LATE_DEPARTURE": "Late departure",
-  "DEPARTURED_AFTER_NEXT_JOURNEY": "Departure after the next departure",
-  "BLOCK_FIRST_DEPARTURE_LATE": "First departure late or blocked.",
+  "subCategory.ASSAULT_ON_DRIVER": "Assault on driver",
+  "subCategory.ASSAULT_ON_PASSENGER": "Assault on passenger",
+  "subCategory.ASSAULT_ON_VEHICLE": "Assault on vehicle",
+  "subCategory.BREAK_MALFUNCTION": "Break malfunction",
+  "subCategory.CONGESTION_CAUSED_BY_ACCIDENT": "Congestion (caused by accident)",
+  "subCategory.CONGESTION_CAUSED_BY_WEATHER": "Congestion cause by weather",
+  "subCategory.CONGESTION_REASON_UKNOWN": "Congestion (reason unknown)",
+  "subCategory.CORRECT_ROUTE_BLOCKED": "Correct route blocked",
+  "subCategory.DEVICE_ERROR": "Device error",
+  "subCategory.DOOR_MALFUNCTION": "Door malfunction",
+  "subCategory.DRIVER_ERROR": "Driver error",
+  "subCategory.DRIVER_LATE": "Driver late",
+  "subCategory.DRIVER_SEIZURE": "Driver seizures",
+  "subCategory.ELECTRIC_MALFUNCTION": "Electric malfunction",
+  "subCategory.ENGINE_MALFUNCTION": "Engine malfunction",
+  "subCategory.FALSE_ALARM": "False alarm",
+  "subCategory.FAULT_UNKNOWN": "Fault unknown",
+  "subCategory.FLUID_LEAKAGE": "Fluid leakage",
+  "subCategory.INSUFFICIENT_CAPASITY": "Insufficient capasity",
+  "subCategory.INSUFFICIENT_INSTRUCTIONS_BY_AUTHORITY": "Insufficient instructions (by authority)",
+  "subCategory.INSUFFICIENT_INSTRUCTIONS_BY_OPERATOR": "Insufficient instructions (by operator)",
+  "subCategory.ITS_SYSTEM_NOT_INSTALLED": "LIJ-System not installed",
+  "subCategory.ND_OPERATOR_PLANNING_ERROR": "Operator planning error",
+  "subCategory.NO_VEHICLE_AVAILABLE": "Vehicle available",
+  "subCategory.OPERATOR_DEVICE_ERROR": "Operator device error",
+  "subCategory.OPERATOR_PERSONNEL_ON_STRIKE": "Operator personnel on strike",
+  "subCategory.OPPOSITE_FAULT": "Opposite fault",
+  "subCategory.OTHER_ASSAULT": "Other assault",
+  "subCategory.OTHER_MALFUNCTION": "Other malfunction",
+  "subCategory.OTHER_OPERATOR_REASON": "Other operator reason",
+  "subCategory.OTHER_SEIZURE": "Other seizure",
+  "subCategory.OTHER_STRIKE": "Other strike",
+  "subCategory.OTHER_ITS_ERROR": "Other LIJ-error",
+  "subCategory.OUT_OF_FUEL": "Out of fuel",
+  "subCategory.OWN_FAULT": "Own fault",
+  "subCategory.PASSED_OUT_PASSENGER": "Passed out passenger",
+  "subCategory.PASSENGER_INJURED": "Passenger injured",
+  "subCategory.PASSENGER_SEIZURE": "Passenger seizure",
+  "subCategory.ROAD_BLOCKED": "Road blocked",
+  "subCategory.STAFF_SHORTAGE": "Staff shortage",
+  "subCategory.STUCK_CAUSED_BY_SLIPPERY": "Stuck caused by slippery",
+  "subCategory.UNDRIVEABLE_CONDITIONS": "Undriveable conditions",
+  "subCategory.UNKNOWN_CAUSE": "Unknown cause",
+  "subCategory.USER_ERROR": "User error",
+  "subCategory.VEHICLE_OFF_THE_ROAD_BY_DRIVER_ERROR": "Vehicle off road (by driver error)",
+  "subCategory.VEHICLE_OFF_THE_ROAD_BY_OTHER_REASON": "Vehicle off road (by other reason)",
+  "subCategory.VS_OPERATOR_PLANNING_ERROR": "Operator planning error",
+  "subCategory.WRONG_INFORMATION_IN_DEVICE": "Wrong information in device",
+  "subCategory.SLIPPERY_TRACK": "Slippery track (leawes)",
+  "subCategory.MISSPARKED_VEHICLE": "Miss parked vehicle",
 
-  "CANCEL_ENTIRE_DEPARTURE": "Departure cancelled",
+  "cancelType.CANCEL_DEPARTURE": "Cancel departure",
+  "cancelType.SKIPPED_STOP_CALLS": "Stops skipped",
+  "cancelType.EARLY_DEPARTURE": "Start departure early",
+  "cancelType.LATE_DEPARTURE": "Start departure late",
+  "cancelType.DEPARTURED_AFTER_NEXT_JOURNEY": "Departured after next journey",
+  "cancelType.BLOCK_FIRST_DEPARTURE_LATE": "Departured block's first departure late",
+  "cancelType.EARLY_DEPARTURE_FROM_TIMING_POINT": "Start departure early from timing point",
+  "cancelType.TIS_ERROR": "TIS error or user error",
+  "cancelType.DETOUR": "Detour",
+  "cancelType.CLOSED_STOP": "Stop closed",
 
-  "DELAYED": "Late",
-  "POSSIBLY_DELAYED": "Possibly late",
-  "REDUCED_TRANSPORT": "Reduced transport capacity",
-  "CANCELLED": "Departure cancelled",
-  "POSSIBLE_DEVIATIONS": "Possible deviations",
-  "RETURNING_TO_NORMAL": "Returning to normal",
-  "DISRUPTION_ROUTE": "Disruption on route",
-  "DEVIATING_SCHEDULE": "Deviating schedule",
-  "IRREGULAR_DEPARTURES": "Irregular departures",
-  "IRREGULAR_DEPARTURES_MAX_15": "Irregular departures for the next 15 minutes",
-  "IRREGULAR_DEPARTURES_MAX_30": "Irregular departures for the next 30 minutes",
-  "VENDING_MACHINE_OUT_OF_ORDER": "Vending machine out of order",
-  "BICYCLE_STATION_OUT_OF_ORDER": "Bicycle station out of order",
-  "BICYCLE_SYSTEM_OUT_OF_ORDER": "Bicycle system out of order",
-  "REDUCED_BICYCLE_PARK_CAPACITY": "Reduced bicycle parking capacity",
-  "NO_TRAFFIC_IMPACT": "No traffic impact",
-  "UNKNOWN": "Unknown"
+  "cancelEffect.CANCEL_ENTIRE_DEPARTURE": "Whole departure",
+  "cancelEffect.CANCEL_STOPS_FROM_START": "Start of departure",
+  "cancelEffect.CANCEL_STOPS_FROM_MIDDLE": "Middle of departure",
+  "cancelEffect.CANCEL_STOPS_FROM_END": "End of departure",
+
+  "alertImpact.DELAYED": "Delayed",
+  "alertImpact.POSSIBLY_DELAYED": "Possibly delayed",
+  "alertImpact.REDUCED_TRANSPORT": "Reduced transport",
+  "alertImpact.CANCELLED": "Cancelled",
+  "alertImpact.POSSIBLE_DEVIATIONS": "Possible deviations",
+  "alertImpact.RETURNING_TO_NORMAL": "Returning to normal",
+  "alertImpact.DISRUPTION_ROUTE": "Diversion route",
+  "alertImpact.DEVIATING_SCHEDULE": "Deviating schedule",
+  "alertImpact.IRREGULAR_DEPARTURES": "Irregular departures",
+  "alertImpact.IRREGULAR_DEPARTURES_MAX_15": "Irregular departures max 15 min",
+  "alertImpact.IRREGULAR_DEPARTURES_MAX_30": "Irregular departures max 30 min",
+  "alertImpact.VENDING_MACHINE_OUT_OF_ORDER": "Vending machine out of order",
+  "alertImpact.BICYCLE_STATION_OUT_OF_ORDER": "Bicycle station out of order",
+  "alertImpact.BICYCLE_SYSTEM_OUT_OF_ORDER": "Bicycle system out of order",
+  "alertImpact.REDUCED_BICYCLE_PARK_CAPACITY": "Reduced bicycle park capacity",
+  "alertImpact.OTHER": "Other impact",
+  "alertImpact.NO_TRAFFIC_IMPACT": "No traffic impact",
+  "alertImpact.UNKNOWN": "Unknown impact"
 }
