--- a/src/languages/alerts/fi.json
+++ b/src/languages/alerts/fi.json
@@ -1,115 +1,123 @@
 {
-  "ACCIDENT": "Liikennevahinko",
-  "ASSAULT": "Häiriköinti/ilkivalta",
-  "NO_DRIVER": "Tuotanto-/Suunnitteluvirhe",
-  "VEHICLE_SHORTAGE": "Ajoneuvo puuttuu",
-  "VEHICLE_BREAKDOWN": "Ajoneuvorikko",
-  "WRONG_ROUTE": "Ajettu väärää reittiä",
-  "WEATHER": "Huono ajokeli",
-  "STRIKE": "Työtaistelutoimenpide",
-  "OTHER": "Muu",
-  "VEHICLE_OFF_THE_ROAD": "Kulkutie/Suistuminen/Ruuhka",
-  "SEIZURE": "Sairaskohtaus/Loukkaantuminen",
-  "ITS_SYSTEM_ERROR": "LIJ-järjestelmän ongelma/käyttövirhe",
-  "TOO_MANY_PASSENGERS": "Liikaa matkustajia",
-  "OTHER_DRIVER_ERROR": "Kuljettajan virhe",
-  "EARLIER_DISRUPTION": "Aikaisempi häiriö",
-  "NO_TRAFFIC_DISRUPTION": "Ei liikennehäiriötä",
-  "TRACK_BLOCKED": "Este raiteilla",
-  "STAFF_DEFICIT": "Henkilöstövaje",
-  "DISTURBANCE": "Järjestyshäiriö",
-  "VEHICLE_DEFICIT": "Kalustovaje",
-  "ROAD_CLOSED": "Katu suljettu",
-  "ROAD_TRENCH": "Katukaivanto",
-  "TRACK_MAINTENANCE": "Kiskotyöt",
-  "TRAFFIC_ACCIDENT": "Onnettomuus",
-  "TRAFFIC_JAM": "Ruuhka",
-  "MEDICAL_INCIDENT": "Sairaustapaus",
-  "WEATHER_CONDITIONS": "Sääolosuhteet",
-  "TECHNICAL_FAILURE": "Tekninen vika",
-  "TEST": "Testiviesti",
-  "ROAD_MAINTENANCE": "Tietyö",
-  "SWITCH_FAILURE": "Vaihdevika",
-  "STATE_VISIT": "Valtiovierailu",
-  "POWER_FAILURE": "Virtahäiriö",
-  "MISPARKED_VEHICLE": "Väärin pysäköity auto",
-  "PUBLIC_EVENT": "Yleisötapahtuma",
-  "ASSAULT_ON_DRIVER": "Kohdistunut kuljettajaan",
-  "ASSAULT_ON_PASSENGER": "Kohdistunut matkustajaan",
-  "ASSAULT_ON_VEHICLE": "Kohdistunut kalustoon",
-  "BREAK_MALFUNCTION": "Jarruvika/paineilmavuoto",
-  "CONGESTION_CAUSED_BY_ACCIDENT": "Ruuhka (ulkopuolisesta syystä, kolari/yleisötapahtuma yms.)",
-  "CONGESTION_CAUSED_BY_WEATHER": "Huonosta kelistä johtuva ruuhka ja hidas eteneminen",
-  "CONGESTION_REASON_UKNOWN": "Ruuhka (hidastumiselle ei tiedossa erityistä syytä)",
-  "CORRECT_ROUTE_BLOCKED": "Tietyö/kolari/yms. estänyt oikean reitin ajamisen",
-  "DEVICE_ERROR": "Laite rikki",
-  "DOOR_MALFUNCTION": "Ovivika",
-  "DRIVER_ERROR": "Kuljettajan virhe",
-  "DRIVER_LATE": "Kuljettaja myöhässä",
-  "DRIVER_SEIZURE": "Kuljettajan sairastuminen/sairaskohtaus",
-  "ELECTRIC_MALFUNCTION": "Sähkövika",
-  "ENGINE_MALFUNCTION": "Moottorin häiriö",
-  "FALSE_ALARM": "Väärä hälytys",
-  "FAULT_UNKNOWN": "Syyllisyys epäselvä",
-  "FLUID_LEAKAGE": "Neste-/Polttoaine-/Voiteluainevuoto",
-  "INSUFFICIENT_CAPASITY": "Kapasiteetti ei riittävää",
-  "INSUFFICIENT_INSTRUCTIONS_BY_AUTHORITY": "Väärä/puutteellinen ohjeistus (tilaaja)",
-  "INSUFFICIENT_INSTRUCTIONS_BY_OPERATOR": "Väärä/puutteellinen ohjeistus (liikennöitsijä)",
-  "ITS_SYSTEM_NOT_INSTALLED": "Autossa ei asennettuna LIJ-laitetta",
-  "ND_OPERATOR_PLANNING_ERROR": "Liikennöitsijän suunnitteluvirhe",
-  "NO_VEHICLE_AVAILABLE": "Ajoneuvopula",
-  "OPERATOR_DEVICE_ERROR": "Laite rikki, liikennöitsijän vastuulla",
-  "OPERATOR_PERSONNEL_ON_STRIKE": "Liikennöitsijän henkilökunta",
-  "OPPOSITE_FAULT": "Vastapuolen syy",
-  "OTHER_ASSAULT": "Muu",
-  "OTHER_MALFUNCTION": "Muu vika",
-  "OTHER_OPERATOR_REASON": "Liikennöitsijästä riippuva",
-  "OTHER_SEIZURE": "Muu syy",
-  "OTHER_STRIKE": "Muu",
-  "OTHER_ITS_ERROR": "Muu vika",
-  "OUT_OF_FUEL": "Polttoaine loppu",
-  "OWN_FAULT": "Oma syy",
-  "PASSED_OUT_PASSENGER": "Päihtynyt matkustaja",
-  "PASSENGER_INJURED": "Matkustajan loukkaantuminen",
-  "PASSENGER_SEIZURE": "Matkustajan sairastuminen/sairaskohtaus",
-  "ROAD_BLOCKED": "Tie poikki, tietyö/kolari/yleisötapahtuma yms.",
-  "STAFF_SHORTAGE": "Henkilökuntapula",
-  "STUCK_CAUSED_BY_SLIPPERY": "Jumissa liukkauden takia",
-  "UNDRIVEABLE_CONDITIONS": "Tie ei sään takia ajokelpoinen (liukkaus yms.)",
-  "UNKNOWN_CAUSE": "Ulkopuolinen syy",
-  "USER_ERROR": "Kuljettajan LIJ-käyttövirhe",
-  "VEHICLE_OFF_THE_ROAD_BY_DRIVER_ERROR": "Auto jumissa ajovirheen takia",
-  "VEHICLE_OFF_THE_ROAD_BY_OTHER_REASON": "Auto jumissa muusta syystä",
-  "VS_OPERATOR_PLANNING_ERROR": "Liikennöitsijän suunnitteluvirhe",
-  "WRONG_INFORMATION_IN_DEVICE": "Laitteessa väärät lähdöt",
-  "SLIPPERY_TRACK": "Liukkaat kiskot (lehtikeli)",
-  "MISSPARKED_VEHICLE": "Väärin pysäköity auto",
+  "category.ACCIDENT": "Liikennevahinko",
+  "category.ASSAULT": "Häiriköinti/ilkivalta",
+  "category.NO_DRIVER": "Tuotanto-/Suunnitteluvirhe",
+  "category.VEHICLE_SHORTAGE": "Ajoneuvo puuttuu",
+  "category.VEHICLE_BREAKDOWN": "Ajoneuvorikko",
+  "category.WRONG_ROUTE": "Ajettu väärää reittiä",
+  "category.WEATHER": "Huono ajokeli",
+  "category.STRIKE": "Työtaistelutoimenpide",
+  "category.OTHER": "Muu syy",
+  "category.VEHICLE_OFF_THE_ROAD": "Kulkutie/Suistuminen/Ruuhka",
+  "category.SEIZURE": "Sairaskohtaus/Loukkaantuminen",
+  "category.ITS_SYSTEM_ERROR": "LIJ-järjestelmän ongelma/käyttövirhe",
+  "category.TOO_MANY_PASSENGERS": "Liikaa matkustajia",
+  "category.OTHER_DRIVER_ERROR": "Kuljettajan virhe",
+  "category.EARLIER_DISRUPTION": "Aikaisempi häiriö",
+  "category.NO_TRAFFIC_DISRUPTION": "Ei liikennehäiriötä",
+  "category.TRACK_BLOCKED": "Este raiteilla",
+  "category.STAFF_DEFICIT": "Henkilöstövaje",
+  "category.DISTURBANCE": "Järjestyshäiriö",
+  "category.VEHICLE_DEFICIT": "Kalustovaje",
+  "category.ROAD_CLOSED": "Katu suljettu",
+  "category.ROAD_TRENCH": "Katukaivanto",
+  "category.TRACK_MAINTENANCE": "Kiskotyöt",
+  "category.TRAFFIC_ACCIDENT": "Onnettomuus",
+  "category.TRAFFIC_JAM": "Ruuhka",
+  "category.MEDICAL_INCIDENT": "Sairaustapaus",
+  "category.WEATHER_CONDITIONS": "Sääolosuhteet",
+  "category.TECHNICAL_FAILURE": "Tekninen vika",
+  "category.TEST": "Testiviesti",
+  "category.ROAD_MAINTENANCE": "Tietyö",
+  "category.SWITCH_FAILURE": "Vaihdevika",
+  "category.STATE_VISIT": "Valtiovierailu",
+  "category.POWER_FAILURE": "Virtahäiriö",
+  "category.MISPARKED_VEHICLE": "Väärin pysäköity auto",
+  "category.PUBLIC_EVENT": "Yleisötapahtuma",
 
-  "CANCEL_DEPARTURE": "Lähtö peruttu",
-  "DETOUR": "Kiertotie",
-  "EARLY_DEPARTURE": "Aikainen lähtö",
-  "EARLY_DEPARTURE_FROM_TIMING_POINT": "Aikainen lähtö ajantasauspysäkiltä",
-  "LATE_DEPARTURE": "Myöhäinen lähtö",
-  "DEPARTURED_AFTER_NEXT_JOURNEY": "Lähtö seruaavan lähdön jälkeen",
-  "BLOCK_FIRST_DEPARTURE_LATE": "Ensimmäinen lähtö estetty",
+  "subCategory.ASSAULT_ON_DRIVER": "Kohdistunut kuljettajaan",
+  "subCategory.ASSAULT_ON_PASSENGER": "Kohdistunut matkustajaan",
+  "subCategory.ASSAULT_ON_VEHICLE": "Kohdistunut kalustoon",
+  "subCategory.BREAK_MALFUNCTION": "Jarruvika/paineilmavuoto",
+  "subCategory.CONGESTION_CAUSED_BY_ACCIDENT": "Ruuhka (ulkopuolisesta syystä, kolari/yleisötapahtuma yms.)",
+  "subCategory.CONGESTION_CAUSED_BY_WEATHER": "Huonosta kelistä johtuva ruuhka ja hidas eteneminen",
+  "subCategory.CONGESTION_REASON_UKNOWN": "Ruuhka (hidastumiselle ei tiedossa erityistä syytä)",
+  "subCategory.CORRECT_ROUTE_BLOCKED": "Tietyö/kolari/yms. estänyt oikean reitin ajamisen",
+  "subCategory.DEVICE_ERROR": "Laite rikki",
+  "subCategory.DOOR_MALFUNCTION": "Ovivika",
+  "subCategory.DRIVER_ERROR": "Kuljettajan virhe",
+  "subCategory.DRIVER_LATE": "Kuljettaja myöhässä",
+  "subCategory.DRIVER_SEIZURE": "Kuljettajan sairastuminen/sairaskohtaus",
+  "subCategory.ELECTRIC_MALFUNCTION": "Sähkövika",
+  "subCategory.ENGINE_MALFUNCTION": "Moottorin häiriö",
+  "subCategory.FALSE_ALARM": "Väärä hälytys",
+  "subCategory.FAULT_UNKNOWN": "Syyllisyys epäselvä",
+  "subCategory.FLUID_LEAKAGE": "Neste-/Polttoaine-/Voiteluainevuoto",
+  "subCategory.INSUFFICIENT_CAPASITY": "Kapasiteetti ei riittävää",
+  "subCategory.INSUFFICIENT_INSTRUCTIONS_BY_AUTHORITY": "Väärä/puutteellinen ohjeistus (tilaaja)",
+  "subCategory.INSUFFICIENT_INSTRUCTIONS_BY_OPERATOR": "Väärä/puutteellinen ohjeistus (liikennöitsijä)",
+  "subCategory.ITS_SYSTEM_NOT_INSTALLED": "Autossa ei asennettuna LIJ-laitetta",
+  "subCategory.ND_OPERATOR_PLANNING_ERROR": "Liikennöitsijän suunnitteluvirhe",
+  "subCategory.NO_VEHICLE_AVAILABLE": "Ajoneuvopula",
+  "subCategory.OPERATOR_DEVICE_ERROR": "Laite rikki, liikennöitsijän vastuulla",
+  "subCategory.OPERATOR_PERSONNEL_ON_STRIKE": "Liikennöitsijän henkilökunta",
+  "subCategory.OPPOSITE_FAULT": "Vastapuolen syy",
+  "subCategory.OTHER_ASSAULT": "Muu",
+  "subCategory.OTHER_MALFUNCTION": "Muu vika",
+  "subCategory.OTHER_OPERATOR_REASON": "Liikennöitsijästä riippuva",
+  "subCategory.OTHER_SEIZURE": "Muu syy",
+  "subCategory.OTHER_STRIKE": "Muu",
+  "subCategory.OTHER_ITS_ERROR": "Muu vika",
+  "subCategory.OUT_OF_FUEL": "Polttoaine loppu",
+  "subCategory.OWN_FAULT": "Oma syy",
+  "subCategory.PASSED_OUT_PASSENGER": "Päihtynyt matkustaja",
+  "subCategory.PASSENGER_INJURED": "Matkustajan loukkaantuminen",
+  "subCategory.PASSENGER_SEIZURE": "Matkustajan sairastuminen/sairaskohtaus",
+  "subCategory.ROAD_BLOCKED": "Tie poikki, tietyö/kolari/yleisötapahtuma yms.",
+  "subCategory.STAFF_SHORTAGE": "Henkilökuntapula",
+  "subCategory.STUCK_CAUSED_BY_SLIPPERY": "Jumissa liukkauden takia",
+  "subCategory.UNDRIVEABLE_CONDITIONS": "Tie ei sään takia ajokelpoinen (liukkaus yms.)",
+  "subCategory.UNKNOWN_CAUSE": "Ulkopuolinen syy",
+  "subCategory.USER_ERROR": "Kuljettajan LIJ-käyttövirhe",
+  "subCategory.VEHICLE_OFF_THE_ROAD_BY_DRIVER_ERROR": "Auto jumissa ajovirheen takia",
+  "subCategory.VEHICLE_OFF_THE_ROAD_BY_OTHER_REASON": "Auto jumissa muusta syystä",
+  "subCategory.VS_OPERATOR_PLANNING_ERROR": "Liikennöitsijän suunnitteluvirhe",
+  "subCategory.WRONG_INFORMATION_IN_DEVICE": "Laitteessa väärät lähdöt",
+  "subCategory.SLIPPERY_TRACK": "Liukkaat kiskot (lehtikeli)",
+  "subCategory.MISSPARKED_VEHICLE": "Väärin pysäköity auto",
 
-  "CANCEL_ENTIRE_DEPARTURE": "Lähtö peruttu",
+  "cancelType.CANCEL_DEPARTURE": "Lähtö peruttu",
+  "cancelType.SKIPPED_STOP_CALLS": "Pysäkkejä jäänyt väliin",
+  "cancelType.EARLY_DEPARTURE": "Lähtenyt lähtöpysäkiltä etuajassa",
+  "cancelType.LATE_DEPARTURE": "Lähtenyt myöhässä",
+  "cancelType.DEPARTURED_AFTER_NEXT_JOURNEY": "Lähtenyt seuraavan aikataulunmukaisen lähdön jälkeen",
+  "cancelType.BLOCK_FIRST_DEPARTURE_LATE": "Ketjun ensimmäinen lähtö lähtenyt myöhässä",
+  "cancelType.EARLY_DEPARTURE_FROM_TIMING_POINT": "Lähtenyt ajantasauspysäkiltä etuajassa",
+  "cancelType.TIS_ERROR": "LIJ-vika tai käyttövirhe",
+  "cancelType.DETOUR": "Poikkeusreitti",
+  "cancelType.CLOSED_STOP": "Pysäkki suljettu",
 
-  "DELAYED": "Myöhässä",
-  "POSSIBLY_DELAYED": "Mahdollisesti viivästynyt",
-  "REDUCED_TRANSPORT": "Ajoneuvoja vähennetty",
-  "CANCELLED": "Lähtö peruttu",
-  "POSSIBLE_DEVIATIONS": "Mahdollisia poikkeamia",
-  "RETURNING_TO_NORMAL": "Palautus ennalleen",
-  "DISRUPTION_ROUTE": "Häiriö reitillä",
-  "DEVIATING_SCHEDULE": "Poikkeava aikataulu",
-  "IRREGULAR_DEPARTURES": "Epäsäännöllisiä lähtöjä",
-  "IRREGULAR_DEPARTURES_MAX_15": "Epäsäännöllisiä lähtöjä seuraavan 15 minuutin ajan",
-  "IRREGULAR_DEPARTURES_MAX_30": "Epäsäännöllisiä lähtöjä seuraavan 30 minuutin ajan",
-  "VENDING_MACHINE_OUT_OF_ORDER": "Myyntiautomaatti epäkunnossa",
-  "BICYCLE_STATION_OUT_OF_ORDER": "Pyöräasema epäkunossa",
-  "BICYCLE_SYSTEM_OUT_OF_ORDER": "Pyöräjärjestelmä epäkunnossa",
-  "REDUCED_BICYCLE_PARK_CAPACITY": "Pyöräpysäköintikapasiteetti vähennetty",
-  "NO_TRAFFIC_IMPACT": "Ei liikennehäiriötä",
-  "UNKNOWN": "Ei tiedossa"
+  "cancelEffect.CANCEL_ENTIRE_DEPARTURE": "Koko lähtö",
+  "cancelEffect.CANCEL_STOPS_FROM_START": "Lähdön alku",
+  "cancelEffect.CANCEL_STOPS_FROM_MIDDLE": "Lähdön keskeltä",
+  "cancelEffect.CANCEL_STOPS_FROM_END": "Lähdön lopusta",
+
+  "alertImpact.DELAYED": "Myöhästyy",
+  "alertImpact.POSSIBLY_DELAYED": "Mahdollisesti myöhässä",
+  "alertImpact.REDUCED_TRANSPORT": "Harvennettu liikenne",
+  "alertImpact.CANCELLED": "Peruttu",
+  "alertImpact.POSSIBLE_DEVIATIONS": "Poikkeukset mahdollisia",
+  "alertImpact.RETURNING_TO_NORMAL": "Palautumassa normaaliksi",
+  "alertImpact.DISRUPTION_ROUTE": "Poikkeusreitti",
+  "alertImpact.DEVIATING_SCHEDULE": "Poikkeusaikataulu",
+  "alertImpact.IRREGULAR_DEPARTURES": "Epäsäännölliset vuorovälit",
+  "alertImpact.IRREGULAR_DEPARTURES_MAX_15": "Epäsäännölliset vuorovälit, odotus enintään n. 15 min",
+  "alertImpact.IRREGULAR_DEPARTURES_MAX_30": "Epäsäännölliset vuorovälit, odotus enintään n. 30 min",
+  "alertImpact.VENDING_MACHINE_OUT_OF_ORDER": "Maksupääte ei toimi",
+  "alertImpact.BICYCLE_STATION_OUT_OF_ORDER": "Pyöräasema pois käytöstä",
+  "alertImpact.BICYCLE_SYSTEM_OUT_OF_ORDER": "Koko pyöräjärjestelmä pois käytöstä",
+  "alertImpact.REDUCED_BICYCLE_PARK_CAPACITY": "Osa pyöräpaikoista pois käytöstä",
+  "alertImpact.OTHER": "Muu vaikutus",
+  "alertImpact.NO_TRAFFIC_IMPACT": "Ei liikennevaikutusta",
+  "alertImpact.UNKNOWN": "Tuntematon vaikutus"
 }
