--- a/src/languages/ui/fi.json
+++ b/src/languages/ui/fi.json
@@ -109,6 +109,7 @@
   "general.category": "Kategoria",
   "general.subcategory": "Alakategoria",
   "general.impact": "Vaikutus",
+  "general.type": "Tyyppi",
   "general.previous": "Edellinen",
   "general.previous.plural": "Edelliset",
 
