--- a/src/languages/ui/se.json
+++ b/src/languages/ui/se.json
@@ -106,6 +106,7 @@
   "general.category": "Kategori",
   "general.subcategory": "Underkategori",
   "general.impact": "Effekt",
+  "general.type": "Typ",
   "general.previous": "Föregående",
   "general.previous.plural": "Föregående",
 
