Use events on journey details sidebar.

--- a/src/languages/ui/en.json
+++ b/src/languages/ui/en.json
@@ -68,6 +68,27 @@
   "journey.hide_graph": "Hide delays and average speeds.",
   "journey.show_graph": "Show delays and average speeds.",
   "journey.stops": "Stops",
+  "journey.events": "Events",
+
+  "journey.event.DEP": "Departure",
+  "journey.event.ARR": "Arrival",
+  "journey.event.PLANNED": "Planned departure",
+  "journey.event.CANCELLATION": "Cancellation",
+  "journey.event.DOO": "Door open",
+  "journey.event.DOC": "Door closed",
+  "journey.event.DUE": "Arriving at stop",
+  "journey.event.ARS": "Arrived at stop",
+  "journey.event.PDE": "Ready tod epart from stop",
+  "journey.event.PAS": "Passsed stop without stopping",
+  "journey.event.WAIT": "Waiting at stop",
+  "journey.event.TLR": "Traffic light priority requested",
+  "journey.event.TLA": "Traffic light priority request answered",
+  "journey.event.DA": "Driver signs into vehicle",
+  "journey.event.DOUT": "Driver signs out of vehicle",
+  "journey.event.BA": "Driver signs into departure block",
+  "journey.event.BOUT": "Driver signs out of departure block",
+  "journey.event.VJA": "Driver signs into departure",
+  "journey.event.VJOUT": "Driver signs out of departure",
 
   "domain.line": "Line",
   "domain.route": "Route",
