--- a/src/languages/ui/fi.json
+++ b/src/languages/ui/fi.json
@@ -69,6 +69,27 @@
   "journey.hide_graph": "Piilota viiveet ja keskinopeudet",
   "journey.show_graph": "Näytä viiveet ja keskinopeudet",
   "journey.stops": "Pysäkit",
+  "journey.events": "Tapahtumat",
+
+  "journey.event.DEP": "Lähtö",
+  "journey.event.ARR": "Saapuminen",
+  "journey.event.PLANNED": "Suunniteltu lähtö",
+  "journey.event.CANCELLATION": "Peruutus",
+  "journey.event.DOO": "Ovi auki",
+  "journey.event.DOC": "Ovi kiinni",
+  "journey.event.DUE": "Saapumassa pysäkille",
+  "journey.event.ARS": "Saapunut pysäkille",
+  "journey.event.PDE": "Valmis lähtemään pysäkiltä",
+  "journey.event.PAS": "Ajo pysäkin ohi pysähtymättä",
+  "journey.event.WAIT": "Odottaa pysäkillä",
+  "journey.event.TLR": "Liikennevaloetuoikeus pyydetty",
+  "journey.event.TLA": "Liikennevaloetuoikeus-pyyntöön vastattu",
+  "journey.event.DA": "Kuljettaja kirjautuu ajoneuvoon",
+  "journey.event.DOUT": "Kuljettaja kirjautuu ulos ajoneuvosta",
+  "journey.event.BA": "Kuljettaja valitsee lähtöketjun",
+  "journey.event.BOUT": "Kuljettaja kirjautuu ulos lähtöketjusta",
+  "journey.event.VJA": "Kuljettaja kirjautuu lähtöön",
+  "journey.event.VJOUT": "Kuljettaja kirjautuu ulos lähdöstä",
 
   "domain.line": "Linja",
   "domain.route": "Reitti",
