--- a/src/languages/ui/fi.json
+++ b/src/languages/ui/fi.json
@@ -84,14 +84,14 @@
   "journey.event.PDE": "Valmis lähtemään pysäkiltä",
   "journey.event.PAS": "Ajo pysäkin ohi pysähtymättä",
   "journey.event.WAIT": "Odottaa pysäkillä",
-  "journey.event.TLR": "Liikennevaloetuoikeus pyydetty",
-  "journey.event.TLA": "Liikennevaloetuoikeus-pyyntöön vastattu",
-  "journey.event.DA": "Kuljettaja kirjautuu ajoneuvoon",
-  "journey.event.DOUT": "Kuljettaja kirjautuu ulos ajoneuvosta",
-  "journey.event.BA": "Kuljettaja valitsee lähtöketjun",
-  "journey.event.BOUT": "Kuljettaja kirjautuu ulos lähtöketjusta",
-  "journey.event.VJA": "Kuljettaja kirjautuu lähtöön",
-  "journey.event.VJOUT": "Kuljettaja kirjautuu ulos lähdöstä",
+  "journey.event.TLR": "Liikennevaloetuustapahtuma",
+  "journey.event.TLA": "Liikennevalokojeen vastaus",
+  "journey.event.DA": "Kuljettaja kirjautunut ajoneuvoon",
+  "journey.event.DOUT": "Kuljettaja kirjautunut ulos ajoneuvosta",
+  "journey.event.BA": "Kuljettaja valinnut lähtöketjun",
+  "journey.event.BOUT": "Kuljettaja kirjautunut ulos lähtöketjusta",
+  "journey.event.VJA": "Kuljettaja kirjautunut lähtöön",
+  "journey.event.VJOUT": "Kuljettaja kirjautunut ulos lähdöstä",
 
   "domain.line": "Linja",
   "domain.route": "Reitti",
